# claude-kanban

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  design.md  justfile  rustfmt.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: launcher-windows.yml  release.yml
agents/: kanban-effort-high.md  kanban-effort-low.md  kanban-effort-max.md  kanban-effort-medium.md  kanban-effort-xhigh.md
assets/: app.css  glue.js
commands/: delegate.md  init.md  open.md  work.md
css/: app.tailwind.css
src/: cli.rs  config.rs  git.rs  land.rs  lib.rs  main.rs  mcp.rs  ops.rs  pr.rs  worktree.rs
src/server/: assets.rs  mod.rs  routes.rs  search.rs  security.rs  sse.rs  views.rs
src/store/: claims.rs  derive.rs  io.rs  lock.rs  mod.rs  model.rs  validate.rs
templates/: board.html  card.html  column.html  detail.html  detail_edit.html  epic_card.html  epic_detail.html  epic_edit.html  filter_epic.html  page.html  settings.html  toast.html
tests/: init_race.rs  land_gh.rs  landing.rs  launcher.rs  manifests.rs  mcp.rs  migrate.rs  pr_gh.rs  server.rs  worktree.rs
